[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="Difficulty" type="Label" parent="."]
margin_top = 13.0
margin_right = 450.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Do you want 
a challenge?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardGame" type="Button" parent="Difficulty"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.905
margin_top = 79.9424
margin_right = -3.90515
margin_bottom = 180.942
custom_fonts/font = SubResource( 2 )
text = "Yes!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyGame" type="Button" parent="Difficulty"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.09485
margin_top = 79.9424
margin_right = 223.095
margin_bottom = 180.942
custom_fonts/font = SubResource( 2 )
text = "No..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 518.414
margin_top = 1.49832
margin_right = 818.414
margin_bottom = 151.498
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
show_behind_parent = true
margin_left = 110.713
margin_top = 590.179
margin_right = 325.713
margin_bottom = 691.178
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frogs" type="Label" parent="."]
margin_top = 277.498
margin_right = 450.0
margin_bottom = 367.498
custom_fonts/font = SubResource( 1 )
text = "Release the
frogs???"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoMoreFrogs" type="Button" parent="Frogs"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.905
margin_top = 79.9424
margin_right = -3.90515
margin_bottom = 180.942
custom_fonts/font = SubResource( 2 )
text = "Yes!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeepFrogs" type="Button" parent="Frogs"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.09485
margin_top = 79.9424
margin_right = 223.095
margin_bottom = 180.942
custom_fonts/font = SubResource( 2 )
text = "No..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Difficulty/HardGame" to="." method="_on_HardGame_pressed"]
[connection signal="pressed" from="Difficulty/EasyGame" to="." method="_on_EasyGame_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Frogs/NoMoreFrogs" to="." method="_on_NoMoreFrogs_pressed"]
[connection signal="pressed" from="Frogs/KeepFrogs" to="." method="_on_KeepFrogs_pressed"]
